fix overflow status for section#contacts

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ footer {
 
 section#contacts {
   margin-top: 50px;
+  height: 190px;
 }
 
 .contact {
